--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/woocommerce__woocommerce-rest-api": "^1.0.2",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "axios": "^0.27.2",
+    "cookies": "^0.8.0",
     "cors": "^2.8.5",
     "next": "12.2.2",
+    "node-fetch": "^3.2.9",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
