--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/woocommerce__woocommerce-rest-api": "^1.0.2",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "axios": "^0.27.2",
+    "cookie": "^0.5.0",
     "cookies": "^0.8.0",
     "cors": "^2.8.5",
     "next": "12.2.2",
