--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "next": "12.2.2",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.7.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@stripe/react-stripe-js": "^1.9.0",
