--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
+    "framer-motion": "^7.1.0",
+    "md5": "^2.3.0",
     "next": "12.2.2",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.7.7",
