--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
+    "encodeurl": "^1.0.2",
     "framer-motion": "^7.1.0",
     "md5": "^2.3.0",
     "next": "12.2.2",
@@ -20,7 +21,8 @@
     "nodemailer": "^6.7.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-spinners": "^0.13.4"
   },
   "devDependencies": {
     "@stripe/react-stripe-js": "^1.9.0",
