--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "encodeurl": "^1.0.2",
+    "express-zip": "^3.0.0",
     "framer-motion": "^7.1.0",
     "md5": "^2.3.0",
     "next": "12.2.2",
